cloudformation/new-temp.yaml
Parameters:

    InstanceType:
      Type: String
      Default: t3.large
      Description: EC2 instance Type
  
    LatestAmiId:
      Type:  String
      Default: ami-07e3dc2213dc535c6
      Description: DEV Web Server AMI Id
  
    VpcId:
      Type: String
      Default: vpc-0efb363ff136ccb99
      Description: VPC ID for launching DEV Web Server
  
    PrivateSubnet1:
      Type: String
      Default: subnet-05e5e23d3646ce1b2
      Description: Private subnet1
    
Resources:
  
  #===========================================================================
  # Security Group Creation - DEV WEB Server
  #===========================================================================
    InstanceSecurityGroup:
      Type: AWS::EC2::SecurityGroup
      Properties:
        GroupName: postsst-aws-dev
        GroupDescription: Allow http to client host
        VpcId: !Ref VpcId
        SecurityGroupIngress:
          - IpProtocol: tcp
            FromPort: 3389
            ToPort: 3389
            CidrIp: 0.0.0.0/0
          - IpProtocol: tcp
            FromPort: 80
            ToPort: 80
            CidrIp: 15.0.0.0/9
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: 15.0.0.0/9
          - IpProtocol: tcp
            FromPort: 80
            ToPort: 80
            CidrIp: 172.30.20.0/24
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: 172.30.20.0/24
          - IpProtocol: tcp
            FromPort: 80
            ToPort: 80
            CidrIp: 172.30.18.0/24
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: 172.30.18.0/24
          - IpProtocol: tcp
            FromPort: 445
            ToPort: 445
            CidrIp: 172.30.20.28/32
          - IpProtocol: tcp
            FromPort: 445
            ToPort: 445
            CidrIp: 172.30.20.51/32
          - IpProtocol: tcp
            FromPort: 445
            ToPort: 445
            CidrIp: 15.0.0.0/9
        SecurityGroupEgress:
          - IpProtocol: -1
            CidrIp: 0.0.0.0/0
        Tags:
          - Key: "Environment"
            Value: "DEV"
          - Key: "EPRID"
            Value: "202351"
          - Key: "Application"
            Value: "POST-SST"     

  #===========================================================================
  # EC2 Key Pair
  #===========================================================================
    EC2Keypair:
      Type: AWS::EC2::KeyPair
      Properties: 
        KeyName: POSTSST-DEV-KEY
        Tags: 
          - Key: "Purpose"
            Value: "DEV Websevers"
          - Key: "Environment"
            Value: "DEV"
          - Key: "EPRID"
            Value: "202351"
          - Key: "Application"
            Value: "POST-SST"
  
  #===========================================================================
  # EC2 Instance Creation in Private subnet 1
  #===========================================================================
    EC2Instance1:
      Type: AWS::EC2::Instance
      Properties:
        InstanceType: !Ref InstanceType
        KeyName: !Ref EC2Keypair
        ImageId: !Ref LatestAmiId
        SubnetId: !Ref PrivateSubnet1
        SecurityGroupIds:
          - !Ref InstanceSecurityGroup
        BlockDeviceMappings:
          - DeviceName: /dev/sda1
            Ebs:
              VolumeSize: 250
        Tags:
          - Key: Name
            Value: g7w03878a_AWSDEV
          - Key: "Environment"
            Value: "DEV"
          - Key: "EPRID"
            Value: "202351"
          - Key: "Application"
            Value: "POST-SST"
          - Key: "BackupPlan"
            Value: "T3"
